mobile tweaks and z-index fixes

--- a/analbum.css
+++ b/analbum.css
@@ -360,7 +360,7 @@
 }
 
 .analbum-track-info-detail {
-	padding-left: 10px;
+	padding-left: 5px;
 }
 
 .analbum-track-writers-container {
@@ -464,7 +464,8 @@
 	display: flex;
 	align-items: center;
 	position: relative;
-	z-index: 2;
+	gap: 5px;
+	z-index: 6; /* must be higher than controls */
 }
 
 .analbum-controls {
@@ -835,6 +836,10 @@
 		border-top-left-radius: 0;
 		border-bottom-right-radius: 0;
 	}
+
+	.analbum-track-credits-popup {
+		white-space: normal;
+	}
 }
 
 @media (max-width: 420px) {
@@ -860,10 +865,6 @@
 		max-width: 95vw;
 	}
 
-	.analbum-track-credits-popup {
-		max-width: 240px;
-		white-space: normal;
-	}
 	.analbum-sm-hide {
 		display: none;
 	}
